--- a/design/admin/stylesheets/pagelayout.css
+++ b/design/admin/stylesheets/pagelayout.css
@@ -283,6 +283,7 @@ div.tabs-content.disabled div.tab-content
 
 #maincontent
 {
+    margin: 0 0 0 15em;
     min-height: 200px;
     border-radius: 2px;
     position: relative;
