--- a/extension/ezoe/design/standard/stylesheets/skins/o2k7/content.css
+++ b/extension/ezoe/design/standard/stylesheets/skins/o2k7/content.css
@@ -182,6 +182,17 @@ div.ezoeItemNonEditable, span.ezoeItemNonEditable
     min-height: 18px;
     padding-left: 16px;
 }
+
+span.ezoeItemNonEditable[align="right"]
+{
+    float: right;
+}
+
+span.ezoeItemNonEditable[align="left"]
+{
+    float: left;
+}
+
 /* core.css ez layout styles for embed tags */
 
 div.ezoeItemNonEditable div.block /* Used around groups of objects which are connected in some way, and requires extra margins to the surroundings */
