--- a/extension/ezoe/design/standard/stylesheets/skins/o2k7/content.css
+++ b/extension/ezoe/design/standard/stylesheets/skins/o2k7/content.css
@@ -194,6 +194,11 @@ span.ezoeItemNonEditable[align="left"]
     float: left;
 }
 
+img[inline="false"]
+{
+    display: block;
+}
+
 /* core.css ez layout styles for embed tags */
 
 div.ezoeItemNonEditable div.block /* Used around groups of objects which are connected in some way, and requires extra margins to the surroundings */
