--- a/extension/ezoe/design/standard/stylesheets/skins/o2k7/content.css
+++ b/extension/ezoe/design/standard/stylesheets/skins/o2k7/content.css
@@ -199,6 +199,18 @@ img[inline="false"]
     display: block;
 }
 
+img[inline="false"][align="right"]
+{
+    float: right;
+    clear: both;
+}
+
+img[inline="false"][align="left"]
+{
+    float: left;
+    clear: both;
+}
+
 /* core.css ez layout styles for embed tags */
 
 div.ezoeItemNonEditable div.block /* Used around groups of objects which are connected in some way, and requires extra margins to the surroundings */
