Add drag and drop priority sorting to legacy Administration Interface

--- a/design/admin/stylesheets/core.css
+++ b/design/admin/stylesheets/core.css
@@ -759,3 +759,8 @@ div.attribute-multioption li
     padding: 0;
     list-style-type: none;
 }
+
+/* This is necessary to prevent the dragged row elements collapse while is being dragged */
+.ui-sortable-helper {
+    display: table!important;
+}
